2018-06-05  Ulrich Müller  <ulm@gentoo.org>

	* glep-mode.el (glep-mode-insert-skeleton): Fold lines as in the
	standard GLEP footer.

2018-04-17  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.43 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2018-04-14  Ulrich Müller  <ulm@gentoo.org>

	* glep-mode.el (glep-mode-insert-skeleton): Use 9999 as dummy GLEP
	number, because XXX causes a warning in docutils-glep. Bug 653126.

2018-02-15  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-run-command):
	* glep-mode.el (glep-mode-format-html): Don't autoload.

2018-01-29  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.42 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* keyword-generation.sh: Automatically update keywords in
	ebuild-mode-keywords.el.
	* ebuild-mode-keywords.el: Insert tokens to mark begin and end
	of automatically generated keywords.

2018-01-28  Ulrich Müller  <ulm@gentoo.org>

	* glep-mode.el (glep-mode-format-html): New command.
	(glep-mode-map): Bind to "C-c C-f".
	(glep-mode-menu): Add to menu.

	* glep-mode.el (glep-mode-insert-skeleton): Add missing
	Content-Type header line.

2018-01-25  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-insert-skeleton): Flip order of
	DEPEND and RDEPEND. Suggested by Aaron Swenson.

2018-01-12  Ulrich Müller  <ulm@gentoo.org>

	* keyword-generation.sh (OBSOLETE): Cleanup.

2017-12-25  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.41 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2017-11-05  Ulrich Müller  <ulm@gentoo.org>

	* glep-mode.el (glep-mode): Make sentence-end-double-space local
	in this buffer.

2017-10-29  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.texi (glep-mode): Document that glep-mode does not
	work with XEmacs.

2017-10-28  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.40 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.
